--- a/koha-tmpl/intranet-tmpl/prog/css/src/installer.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/installer.scss
@@ -144,8 +144,13 @@ th {
 }
 
 .update_error {
-    color: #FF0000;
+    color: #dc3545;
     font-weight: bold;
+}
+
+.text-warning {
+    color: #8a6804 !important;
+    background-color: #fff1c1;
 }
 
 .checkbox {
